--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -23,8 +23,9 @@ dependencies {
 
     testCompile gradleTestKit()
     testCompile 'com.netflix.nebula:nebula-test'
-    testCompile 'org.mockito:mockito-core'
+    testCompile 'com.squareup.okhttp3:mockwebserver'
     testCompile 'org.assertj:assertj-core'
+    testCompile 'org.mockito:mockito-core'
 }
 
 gradlePlugin {
