disable Slf4jLogsafeArgs cos we are not a service / consumed by a service

--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -37,3 +37,7 @@ idea {
         testSourceDirs += file("src/test/groovy")
     }
 }
+
+compileJava {
+    options.compilerArgs += '-Xep:Slf4jLogsafeArgs:OFF'
+}
