--- a/versions.props
+++ b/versions.props
@@ -5,7 +5,7 @@ com.google.googlejavaformat:google-java-format = 1.5
 com.google.guava:guava = 22.0
 com.netflix.nebula:nebula-test = 6.7.0
 com.palantir.baseline:* = 0.19.0
-com.palantir.conjure:* = 4.0.0-rc2
+com.palantir.conjure:* = 4.0.0
 com.palantir.syntactic-paths:syntactic-paths = 0.6.1
 com.palantir.tokens:* = 3.0.1
 com.squareup.okhttp3:mockwebserver = 3.9.1
