--- a/versions.props
+++ b/versions.props
@@ -1,26 +1,13 @@
-com.fasterxml.jackson.*:jackson-* = 2.7.4
-com.fasterxml.jackson.datatype:jackson-datatype-jdk7 = 2.6.7
 com.google.errorprone:error_prone_annotations = 2.3.1
-com.google.googlejavaformat:google-java-format = 1.5
-com.google.guava:guava = 22.0
-com.netflix.nebula:nebula-test = 6.7.0
-com.palantir.baseline:* = 0.19.0
-com.palantir.conjure:* = 4.0.0
-com.palantir.syntactic-paths:syntactic-paths = 0.6.1
-com.palantir.tokens:* = 3.0.1
+com.google.guava:guava = 23.6.1-jre
+com.netflix.nebula:nebula-test = 7.1.0
 com.squareup.okhttp3:mockwebserver = 3.9.1
-com.squareup:javapoet = 1.11.1
 commons-io:commons-io = 2.6
 junit:junit = 4.12
-org.apache.commons:commons-lang3 = 3.7
 org.assertj:* = 3.10.0
-org.hamcrest:hamcrest-core = 1.3
-org.immutables:value = 2.6.1
 org.mockito:mockito-core = 2.18.3
-org.slf4j:* = 1.7.25
 
 # Resolve conflicts
 com.google.code.findbugs:jsr305 = 3.0.2
 com.squareup.okhttp3:okhttp = 3.10.0
 org.objenesis:objenesis = 2.6
-
