--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,51 +7,56 @@ build-defaults: &build-defaults
     CIRCLE_TEST_REPORTS: /home/circleci/junit
     CIRCLE_ARTIFACTS: /home/circleci/artifacts
 
-build-steps: &build-steps
-  - checkout
-  - restore_cache: { key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
-  - restore_cache: { key: 'gradle-cache-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
-  - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile build
-  - save_cache:
-      key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
-      paths: [ ~/.gradle/wrapper ]
-  - save_cache:
-      key: 'gradle-cache-v2-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}'
-      paths: [ ~/.gradle/caches ]
-  - run:
-      command: mkdir -p ~/junit && find . -type f -regex ".*/build/.*TEST.*xml" -exec cp --parents {} ~/junit/ \;
-      when: always
-
-publish-step: &publish-step
-  deploy:
-      command: |
-        # publishing snapshots to bintray does not work, so we only publish from tag builds (not develop)
-        if [[ "${CIRCLE_TAG}" =~ [0-9]+(\.[0-9]+)+(-[a-zA-Z]+[0-9]*)* ]]; then
-          ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile publish
-        else
-          ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile publishToMavenLocal
-          mkdir -p $CIRCLE_ARTIFACTS/poms
-          find . -name 'pom-default.xml' -exec cp --parents {} $CIRCLE_ARTIFACTS/poms \;
-        fi
-
-collect-steps: &collect-steps
-  - store_test_results: { path: ~/junit }
-  - store_artifacts: { path: ~/artifacts }
-
 jobs:
   build:
     docker: [{ image: 'circleci/openjdk:8u181-jdk' }]
     <<: *build-defaults
     steps:
-      <<: *build-steps
-      - *publish-step
-      <<: *collect-steps
+      - checkout
+      - restore_cache: { key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
+      - restore_cache: { key: 'gradle-cache-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
+      - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile build
+      - save_cache:
+          key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
+          paths: [ ~/.gradle/wrapper ]
+      - save_cache:
+          key: 'gradle-cache-v2-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}'
+          paths: [ ~/.gradle/caches ]
+      - run:
+          command: mkdir -p ~/junit && find . -type f -regex ".*/build/.*TEST.*xml" -exec cp --parents {} ~/junit/ \;
+          when: always
+      - deploy:
+          command: |
+            # publishing snapshots to bintray does not work, so we only publish from tag builds (not develop)
+            if [[ "${CIRCLE_TAG}" =~ [0-9]+(\.[0-9]+)+(-[a-zA-Z]+[0-9]*)* ]]; then
+              ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile publish
+            else
+              ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile publishToMavenLocal
+              mkdir -p $CIRCLE_ARTIFACTS/poms
+              find . -name 'pom-default.xml' -exec cp --parents {} $CIRCLE_ARTIFACTS/poms \;
+            fi
+      - store_test_results: { path: ~/junit }
+      - store_artifacts: { path: ~/artifacts }
+
   build-11:
     docker: [{ image: 'circleci/openjdk:11' }]
     <<: *build-defaults
     steps:
-      <<: *build-steps
-      <<: *collect-steps
+      - checkout
+      - restore_cache: { key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
+      - restore_cache: { key: 'gradle-cache-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
+      - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile build
+      - save_cache:
+          key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
+          paths: [ ~/.gradle/wrapper ]
+      - save_cache:
+          key: 'gradle-cache-v2-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}'
+          paths: [ ~/.gradle/caches ]
+      - run:
+          command: mkdir -p ~/junit && find . -type f -regex ".*/build/.*TEST.*xml" -exec cp --parents {} ~/junit/ \;
+          when: always
+      - store_test_results: { path: ~/junit }
+      - store_artifacts: { path: ~/artifacts }
 
 workflows:
   version: 2
