--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ build-defaults: &build-defaults
 
 jobs:
   build:
-    docker: [{ image: 'circleci/openjdk:8u181-node-browsers' }]
+    docker: [{ image: 'circleci/openjdk:8u181-node' }]
     <<: *build-defaults
     steps:
       - checkout
@@ -43,7 +43,7 @@ jobs:
       - store_artifacts: { path: ~/artifacts }
 
   build-11:
-    docker: [{ image: 'circleci/openjdk:11-node-browsers' }]
+    docker: [{ image: 'circleci/openjdk:11-node' }]
     <<: *build-defaults
     steps:
       - checkout
