--- a/versions.props
+++ b/versions.props
@@ -6,6 +6,7 @@ commons-io:commons-io = 2.6
 junit:junit = 4.12
 org.assertj:* = 3.10.0
 org.mockito:mockito-core = 2.18.3
+org.spockframework:* = 1.2-groovy-2.4
 
 # Resolve conflicts
 com.google.code.findbugs:jsr305 = 3.0.2
