--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 import net.ltgt.gradle.errorprone.CheckSeverity
 apply plugin: 'groovy'
 apply plugin: 'java-gradle-plugin'
@@ -21,6 +22,9 @@ apply from: "$rootDir/gradle/publish-jar.gradle"
 dependencies {
     compile project(':gradle-conjure-api')
     compile 'com.google.guava:guava'
+    compile 'com.palantir.sls.versions:sls-versions'
+    compile 'com.fasterxml.jackson.core:jackson-databind'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
 
     testCompile gradleTestKit()
     testCompile 'com.netflix.nebula:nebula-test'
