--- a/versions.props
+++ b/versions.props
@@ -1,6 +1,8 @@
+com.fasterxml.jackson.*:* = 2.9.7
 com.google.errorprone:error_prone_annotations = 2.3.1
 com.google.guava:guava = 23.6.1-jre
 com.netflix.nebula:nebula-test = 7.1.0
+com.palantir.sls.versions:sls-versions = 0.9.0
 com.squareup.okhttp3:mockwebserver = 3.9.1
 commons-io:commons-io = 2.6
 junit:junit = 4.12
