[Feature] Add new conjureProductDependency Extension (#54)
## Before this PR
It was not possible to express product dependencies for conjure generated APIs

## After this PR
Users can use the new `productDependency` extension to easily specify the APIs product dependencies once and have them wired into every generated language (only java and typescript supported for now).
Ex:
```gradle
productDependencies {
    productDependency {
        productGroup "com.palantir.conjure"
        productName "conjure"
        minimumVersion "1.2.0"
        recommendedVersion "1.2.0"
        maximumVersion "2.x.x"
    }
}
```

For Java projects, a new manifest attribute `Sls-Recommended-Product-Dependencies` file will be written, containing a serialised version of the extension, matching the behaviour of sls-packaging (https://github.com/palantir/sls-packaging/blob/605e221dbf960f1751e74cdbfd75b07fa7c0b3c1/gradle-sls-packaging/src/main/groovy/com/palantir/gradle/dist/tasks/CreateManifestTask.groovy#L47).

--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -13,7 +13,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 import net.ltgt.gradle.errorprone.CheckSeverity
+
 apply plugin: 'groovy'
 apply plugin: 'java-gradle-plugin'
 apply from: "$rootDir/gradle/publish-jar.gradle"
@@ -21,6 +23,8 @@ apply from: "$rootDir/gradle/publish-jar.gradle"
 dependencies {
     compile project(':gradle-conjure-api')
     compile 'com.google.guava:guava'
+    compile 'com.palantir.sls.versions:sls-versions'
+    compile 'com.fasterxml.jackson.core:jackson-databind'
 
     testCompile gradleTestKit()
     testCompile 'com.netflix.nebula:nebula-test'
