--- a/gradle-conjure-api/build.gradle
+++ b/gradle-conjure-api/build.gradle
@@ -18,4 +18,5 @@ apply from: "$rootDir/gradle/publish-jar.gradle"
 
 dependencies {
     compile localGroovy()
+    compile 'com.fasterxml.jackson.core:jackson-annotations'
 }
