--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
 
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.gradle.publish:plugin-publish-plugin:0.10.0'
         classpath 'com.netflix.nebula:nebula-publishing-plugin:7.2.3'
         classpath 'com.palantir.baseline:gradle-baseline-java:0.34.0'
         classpath 'com.palantir.configurationresolver:gradle-configuration-resolver-plugin:0.3.0'
