--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -19,6 +19,7 @@ import net.ltgt.gradle.errorprone.CheckSeverity
 apply plugin: 'groovy'
 apply plugin: 'java-gradle-plugin'
 apply from: "$rootDir/gradle/publish-jar.gradle"
+apply plugin: 'com.gradle.plugin-publish'
 
 dependencies {
     compile project(':gradle-conjure-api')
@@ -48,3 +49,23 @@ tasks.withType(JavaCompile).configureEach {
         check('Slf4jLogsafeArgs', CheckSeverity.OFF)
     }
 }
+
+pluginBundle {
+    website = 'https://github.com/palantir/gradle-conjure'
+    vcsUrl = 'https://github.com/palantir/gradle-conjure'
+    description = 'Gradle Conjure is a build tool which allows defining and generating code for Conjure APIs in Java projects.'
+    tags = ['conjure', 'java', 'typescript', 'python']
+
+    plugins {
+        gradleConjurePlugin {
+            id = 'com.palantir.conjure'
+            displayName = 'Palantir Gradle Conjure'
+        }
+    }
+}
+
+publishPlugins.onlyIf {
+    versionDetails().isCleanTag
+}
+
+tasks.publish.dependsOn publishPlugins
