--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -80,7 +80,7 @@ pluginBundle {
 tasks.publishPlugins {
     project.ext.'gradle.publish.key' = System.env.GRADLE_KEY
     project.ext.'gradle.publish.secret' = System.env.GRADLE_SECRET
-//    onlyIf { versionDetails().isCleanTag }
+    onlyIf { versionDetails().isCleanTag }
 }
 
 tasks.publish.dependsOn publishPlugins
