--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - restore_cache: { key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
       - restore_cache: { key: 'gradle-cache-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
       - run: sudo apt-get update
-      - run: sudo apt-get install twine python-setuptools
+      - run: sudo apt-get install twine python-setuptools python-pip
       - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile build --info
       - save_cache:
           key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
@@ -54,7 +54,7 @@ jobs:
       - restore_cache: { key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
       - restore_cache: { key: 'gradle-cache-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
       - run: sudo apt-get update
-      - run: sudo apt-get install twine python-setuptools
+      - run: sudo apt-get install twine python-setuptools python-pip
       - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --profile build --info
       - save_cache:
           key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
