--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,9 @@ jobs:
       - restore_cache: { key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
       - restore_cache: { key: 'gradle-cache-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
       - run: sudo apt-get update
-      - run: sudo apt-get install twine python-setuptools python-pip
-      - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile build --debug
+      - run: sudo apt-get install python-setuptools python-pip
+      - run: pip install twine
+      - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --max-workers=8 --profile build
       - save_cache:
           key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
           paths: [ ~/.gradle/wrapper ]
@@ -54,8 +55,9 @@ jobs:
       - restore_cache: { key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}' }
       - restore_cache: { key: 'gradle-cache-{{ checksum "versions.props" }}-{{ checksum "build.gradle" }}' }
       - run: sudo apt-get update
-      - run: sudo apt-get install twine python-setuptools python-pip
-      - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --profile build --debug
+      - run: sudo apt-get install python-setuptools python-pip
+      - run: pip install twine
+      - run: ./gradlew --no-daemon --parallel --stacktrace  --continue --profile build
       - save_cache:
           key: 'gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}'
           paths: [ ~/.gradle/wrapper ]
