--- a/versions.props
+++ b/versions.props
@@ -7,6 +7,7 @@ com.squareup.okhttp3:mockwebserver = 3.9.1
 commons-io:commons-io = 2.6
 junit:junit = 4.12
 org.assertj:* = 3.12.2
+org.immutables:value = 2.7.4
 org.mockito:mockito-core = 2.27.0
 org.spockframework:* = 1.2-groovy-2.4
 
