Try to fix appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,15 +4,14 @@ build:
   verbosity: detailed
 
 build_script:
-  - gradlew.bat compileJava compileTestJava --info --no-daemon
+  - gradlew.bat compileJava compileTestJava --info --stacktrace --no-daemon
 
 test_script:
-  - gradlew.bat dependencies --info --no-daemon
+  - gradlew.bat test --info --stacktrace --no-daemon
 
 branches:
   only:
-    - master
-    - development
+    - develop
 
 cache:
   - C:\Users\appveyor\.gradle
