--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,6 @@ cache:
   - C:\Users\appveyor\.gradle
 
 environment:
-  matrix:
-    - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-
-matrix:
-  fast_finish: true
+  nodejs_version: "6"
+  JAVA_HOME: C:\Program Files\Java\jdk1.8.0
 
