--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,18 @@
 version: "{branch} {build}"
 
+environment:
+  nodejs_version: "10"
+  JAVA_HOME: C:\Program Files\Java\jdk1.8.0
+
+install:
+  - ps: Install-Product node $env:nodejs_version
+
 build:
   verbosity: detailed
 
 build_script:
+  - node --version
+  - npm --version
   - gradlew.bat compileJava compileTestJava --info --stacktrace --no-daemon
 
 test_script:
@@ -15,8 +24,3 @@ branches:
 
 cache:
   - C:\Users\appveyor\.gradle
-
-environment:
-  nodejs_version: "6"
-  JAVA_HOME: C:\Program Files\Java\jdk1.8.0
-
