--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ build:
 build_script:
   - node --version
   - npm --version
-  - ps: set
+  - cmd: set
   - gradlew.bat compileJava compileTestJava --info --stacktrace --no-daemon
 
 test_script:
