--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ subprojects {
     sourceCompatibility = 1.8
 
     tasks.withType(JavaCompile) {
-        options.compilerArgs += ['-Werror']
+        options.compilerArgs += ['-Werror', '-Xlint:deprecation']
         options.errorprone {
             check("PreferSafeLoggableExceptions", CheckSeverity.OFF)
         }
