--- a/changelog/@unreleased/pr-258.v2.yml
+++ b/changelog/@unreleased/pr-258.v2.yml
@@ -1,6 +1,5 @@
 type: fix
 fix:
-  description: The previous release had a bug, this release fixes that bug and correctly
-    configures source sets as not immutable.
+  description: Restores `./gradlew idea` functionality to pre-4.13.2 behaviour.
   links:
   - https://github.com/palantir/gradle-conjure/pull/258
