--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ apply plugin: 'com.palantir.git-version'
 
 allprojects {
     apply plugin: 'com.palantir.java-format'
-    version gitVersion()
+    version System.env.CIRCLE_TAG ?: gitVersion()
     group 'com.palantir.gradle.conjure'
 
     repositories {
