--- a/versions.props
+++ b/versions.props
@@ -10,6 +10,8 @@ org.assertj:* = 3.15.0
 org.immutables:value = 2.8.3
 org.mockito:mockito-core = 3.3.0
 org.spockframework:* = 1.2-groovy-2.4
+com.palantir.sls-packaging:* = 4.7.0
+com.palantir.conjure.java.runtime:* = 4.65.1
 
 
 # Resolve conflicts
