--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ allprojects {
     group 'com.palantir.gradle.conjure'
 
     repositories {
+        jcenter()
         mavenCentral()
         maven {
             url 'https://dl.bintray.com/palantir/releases/'
