--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,12 @@ apply plugin: 'com.palantir.consistent-versions'
 apply plugin: 'com.palantir.baseline'
 apply plugin: 'com.palantir.git-version'
 
+version System.env.CIRCLE_TAG ?: gitVersion()
+
 allprojects {
     apply plugin: 'com.palantir.java-format'
-    version System.env.CIRCLE_TAG ?: gitVersion()
+    version rootProject.version
+
     group 'com.palantir.gradle.conjure'
 
     repositories {
