--- a/versions.props
+++ b/versions.props
@@ -12,6 +12,7 @@ org.mockito:mockito-core = 3.6.28
 org.spockframework:* = 1.2-groovy-2.4
 com.palantir.sls-packaging:* = 4.24.0
 com.palantir.conjure.java.runtime:* = 6.8.0
+net.bytebuddy:byte-buddy = 1.10.18
 
 
 # Resolve conflicts
