--- a/changelog/@unreleased/pr-685.v2.yml
+++ b/changelog/@unreleased/pr-685.v2.yml
@@ -1,5 +1,5 @@
-type: improvement
-improvement:
+type: break
+break:
   description: Conjure generators run in-process reuse classloaders between runs.
     Note that the plugin now requires Gradle 6.X (previously it worked on Gradle 5.X)
   links:
