Apply revapi plugin for api

--- a/gradle-conjure-api/build.gradle
+++ b/gradle-conjure-api/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'com.palantir.external-publish-jar'
+apply plugin: 'com.palantir.revapi'
 
 dependencies {
     compile localGroovy()
