--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.palantir.sls.versions:sls-versions'
     implementation 'com.palantir.conjure.java.runtime:conjure-java-jackson-serialization'
     implementation 'com.palantir.sls-packaging:gradle-recommended-product-dependencies'
+    implementation 'commons-io:commons-io'
     implementation 'net.bytebuddy:byte-buddy'
 
     annotationProcessor 'org.immutables:value'
