--- a/changelog/@unreleased/pr879.v2.yml
+++ b/changelog/@unreleased/pr879.v2.yml
@@ -1,5 +1,5 @@
 type: fix
-improvement:
+fix:
   description: revert optional max version change
   links:
     - https://github.com/palantir/gradle-conjure/pull/879
