--- a/changelog/@unreleased/pr-898.v2.yml
+++ b/changelog/@unreleased/pr-898.v2.yml
@@ -1,6 +1,6 @@
 type: fix
 fix:
   description: Restore perf optimization to reuse the same classloader for conjure
-    generators
+    generators when using gradle 7.4.2
   links:
   - https://github.com/palantir/gradle-conjure/pull/898
