Fix: remove references to artifactory as we are supporting any npm registry and not artifactory

--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -104,6 +104,6 @@ tasks.withType(JavaCompile).configureEach {
 
 
 test {
-    environment "ARTIFACTORY_PASSWORD", "pass"
-    environment "ARTIFACTORY_USERNAME", "user"
+    environment "REGISTRY_USERNAME", "user"
+    environment "REGISTRY_PASSWORD", "pass"
 }
