Feature: Add task that generates .npmrc based on the upstream repository (#1025)
Add task that generates .npmrc for configured repository and username and password

--- a/gradle-conjure/build.gradle
+++ b/gradle-conjure/build.gradle
@@ -101,3 +101,9 @@ tasks.withType(JavaCompile).configureEach {
         check('Slf4jLogsafeArgs', CheckSeverity.OFF)
     }
 }
+
+
+test {
+    environment "REGISTRY_USERNAME", "user"
+    environment "REGISTRY_PASSWORD", "pass"
+}
